fixed overflow bug

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -59,6 +59,7 @@ body {
 
 .popover {
   color: #333;
+  max-width: none;
 }
 
 .popover-content {
